[gd_scene load_steps=5 format=3 uid="uid://dbtxk3ja0x0qd"]

[ext_resource type="Script" path="res://FrogTimer.gd" id="1_wlsv4"]
[ext_resource type="Texture2D" uid="uid://cw258vfatfwu3" path="res://assets/Icons/frogtimerjump.png" id="2_ffg6u"]
[ext_resource type="Texture2D" uid="uid://qrxr5g8nre1o" path="res://assets/Icons/frogtimersit.png" id="3_bp43a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x5rqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ffg6u")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bp43a")
}],
"loop": true,
"name": &"sit",
"speed": 5.0
}]

[node name="FrogTimer" type="Node2D"]
script = ExtResource("1_wlsv4")

[node name="Frog" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x5rqu")
animation = &"jump"

[node name="UpTimer" type="Timer" parent="."]

[node name="DownTimer" type="Timer" parent="."]

[node name="SitTimer" type="Timer" parent="."]
